prevent invisible log

--- a/src/ui/components/logs-field.less
+++ b/src/ui/components/logs-field.less
@@ -24,14 +24,14 @@
 @keyframes kf-log-new {
   0%{
     //background-color: #222;
-    opacity:0;
+    opacity:0.4;
     color: #ff0;
     //transform:translateY(-20px);
     //margin-top: -10px;
     //margin-bottom: -10px;
   }
   75%{
-    opacity:0.5;
+    opacity:0.8;
     color: #ff0;
   }
   100%{
